# secret-santa-service

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-01-06-043426_create_users/: up.sql
migrations/2023-01-06-043506_create_groups/: down.sql  up.sql
migrations/2023-01-06-043519_create_members/: down.sql  up.sql
migrations/2023-01-06-043551_create_santas/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  schema.rs
src/api/: groups.rs  members.rs  mod.rs  santas.rs  users.rs
src/database/: groups.rs  members.rs  mod.rs  santas.rs  users.rs
src/models/: groups.rs  members.rs  mod.rs  santas.rs  users.rs
